<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="105dp"
        android:text="@string/greeting"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:paddingBottom="4dp"
        android:paddingLeft="9dp"
        android:text="@string/utility_note"
        android:textColor="#000"
        android:textStyle="normal|bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="41dp" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="214dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center">

        <TableRow>

            <TextView
                android:padding="1dip"
                android:paddingRight="2dp"
                android:text="@string/hki"
                android:textColor="#000"
                android:textSize="12sp"
                android:textStyle="bold|normal" />

            <TextView
                android:gravity="right"

                android:padding="1dip"
                android:paddingRight="2dp"
                android:text="@string/namehki"
                android:textColor="#000"
                android:textSize="12sp"
                android:textStyle="bold|normal" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="1dip"

                android:paddingRight="2dp"
                android:text="@string/mobNo"
                android:textColor="#000"
                android:textSize="12sp"
                android:textStyle="bold|normal" />

            <TextView
                android:gravity="right"
                android:padding="1dip"
                android:paddingRight="2dp"
                android:text="@string/number"

                android:textColor="#000"
                android:textSize="12sp"
                android:textStyle="bold|normal" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="1dip"
                android:paddingRight="2dp"
                android:text="@string/helpdesk"
                android:textColor="#000"
                android:textSize="12sp"
                android:textStyle="bold|normal" />

            <TextView
                android:gravity="right"
                android:padding="1dip"
                android:paddingRight="2dp"
                android:text="@string/emailhd"
                android:textColor="#000"
                android:textSize="12sp"
                android:textStyle="bold|normal" />

        </TableRow>

        <TableRow>

            <TextView
                android:padding="1dip"
                android:paddingRight="2dp"
                android:text="@string/phone"
                android:textColor="#000"
                android:textSize="12sp"
                android:textStyle="bold|normal" />

            <TextView
                android:gravity="right"
                android:padding="1dip"
                android:paddingRight="2dp"
                android:text="@string/no"
                android:textColor="#000"
                android:textSize="12sp"
                android:textStyle="bold|normal" />
        </TableRow>
    </TableLayout>


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="237dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="22dp"
        android:paddingBottom="4dp"
        android:paddingLeft="9dp"
        android:text="@string/ps"
        android:textColor="#000"
        android:textSize="15sp"
        android:textStyle="normal|bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="41dp" />


</RelativeLayout>