<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/complaint"
            android:icon="@drawable/ic_playlist_add_black_24dp"
            android:title="@string/complaint" />
        <item
            android:id="@+id/nb"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/nb" />
        <item
            android:id="@+id/hp"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/hp" />
        <item
            android:id="@+id/up"
            android:icon="@drawable/ic_menu_manage"
            android:title="Payment Status" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
        </menu>
    </item>

</menu>
