<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >
    <!-- commenting the preview of image file
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vision"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""/>
-->
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="20dp"
    android:layout_centerHorizontal="true"
    android:id="@+id/ll1"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tid"
        android:text="@string/tid"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="25sp"
        />
    <EditText
        android:layout_marginLeft="15dp"
        android:layout_alignRight="@+id/select"
        android:id="@+id/edit"
        android:hint="Transaction ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHighlight="#00bfa5"
        android:textColorHint="@color/colorPrimaryDark"
        />


</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_below="@+id/ll1"
        android:id="@+id/ll12"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/showtid"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ll12"

        android:id="@+id/ll2"
        android:layout_marginTop="30dp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="#00bfa5"
            android:textColor="#FFFFFF"
            android:padding="5dp"

            android:id="@+id/select"
            />
        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="600px"
            android:maxWidth="600px"
            android:adjustViewBounds="true"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_below="@id/ll2"
        android:layout_marginTop="40dp"
        >


    <Button

        android:layout_below="@+id/edit"
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="#00bfa5"
        android:textColor="#FFFFFF"
        android:padding="5dp"
        />

    <Button

        android:layout_alignLeft="@+id/upload"
        android:layout_below="@+id/select"
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="#00bfa5"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="40dp"
        android:padding="5dp"
        />
    </LinearLayout>


</RelativeLayout>